--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,9 @@ jobs:
           username: ${{ secrets.NCP_NCR_ACCESS_KEY }}
           password: ${{ secrets.NCP_NCR_SECRET_KEY }}
 
+      - name: List Docker images
+        run: docker images
+
       - name: Set Tag Name
         run: docker image tag ko-living-fe_front-service ${{ secrets.NCP_NCR }}/nextjs-docker:latest
 
