[chore] 도커 빌드 고도화
1. repository 명 수정 :: docker-compose 빌드 시 환경 변수 전달 > docker-compose 에 image 옵션을 추가
2. build, push 를 두번씩 하게끔 수정 :: 덮어쓰기 용도의 latest 버전과, 히스토리 관리 용도의 빌드 버전을 push 한다. (빌드 버전 태그는 주기적으로 삭제해 주는 게 필요)

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Build Docker image
+      - name: Build Docker image / tag with build number
         run: docker-compose build
+        env:
+          BUILD_NUMBER: ${{ github.run_number }}
+          NCP_NCR: ${{ secrets.NCP_NCR }}
+          IMAGE_NAME: koliving_fe
+
+      - name: Build Docker image / tag latest
+        run: docker-compose build
+        env:
+          BUILD_NUMBER: latest
+          NCP_NCR: ${{ secrets.NCP_NCR }}
+          IMAGE_NAME: koliving_fe
 
       - name: Login to NCP Container Registry
         uses: docker/login-action@v2
@@ -24,14 +35,11 @@ jobs:
           username: ${{ secrets.NCP_NCR_ACCESS_KEY }}
           password: ${{ secrets.NCP_NCR_SECRET_KEY }}
 
-      - name: List Docker images
-        run: docker images
+      - name: Push Docker image / tag with build number
+        run: docker push ${{ secrets.NCP_NCR }}/koliving_fe:${{ secrets.NCP_NCR }}
 
-      - name: Set Tag Name
-        run: docker image tag koliving_fe_front-service ${{ secrets.NCP_NCR }}/nextjs-docker:latest
-
-      - name: Push Docker image
-        run: docker push ${{ secrets.NCP_NCR }}/nextjs-docker:latest
+      - name: Push Docker image / tag latest
+        run: docker push ${{ secrets.NCP_NCR }}/koliving_fe:latest
 
       - name: Connect ssh
         uses: appleboy/ssh-action@master
