[chore] 도커 이미지 리스트 출력

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,9 @@ jobs:
           NCP_NCR: ${{ secrets.NCP_NCR }}
           IMAGE_NAME: koliving_fe
 
+      - name: List Docker images
+        run: docker images
+
       - name: Login to NCP Container Registry
         uses: docker/login-action@v2
         with:
