--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,12 +39,22 @@ jobs:
           password: ${{ secrets.NCP_NCR_SECRET_KEY }}
 
       - name: Push Docker image / tag with build number
-        run: docker push ${{ secrets.NCP_NCR }}/koliving_fe:${{ secrets.NCP_NCR }}
+        run: docker push ${{ secrets.NCP_NCR }}/koliving_fe:${{ github.run_number }}
 
       - name: Push Docker image / tag latest
         run: docker push ${{ secrets.NCP_NCR }}/koliving_fe:latest
 
-      - name: Connect ssh
+      - name: Copy Docker Compose file to NCP Server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.NCP_SERVER_IP }}
+          username: ${{ secrets.NCP_SERVER_USERNAME }}
+          password: ${{ secrets.NCP_SERVER_PASSWORD }}
+          port: ${{ secrets.NCP_SERVER_PORT }}
+          source: docker-compose.yml
+          target: /deploy/scripts
+
+      - name: Connect ssh to NCP Server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.NCP_SERVER_IP }}
@@ -52,6 +62,7 @@ jobs:
           password: ${{ secrets.NCP_SERVER_PASSWORD }}
           port: ${{ secrets.NCP_SERVER_PORT }}
           script: |
+            cd /deploy/scripts
             echo ${{ secrets.NCP_NCR_SECRET_KEY }} | docker login -u ${{ secrets.NCP_NCR_ACCESS_KEY }} --password-stdin ${{ secrets.NCP_NCR }}
             docker pull ${{ secrets.NCP_NCR }}/nextjs-docker:latest
             if [[ $(docker ps -q) ]]; then
@@ -60,6 +71,5 @@ jobs:
             else
               echo "No running containers found."
             fi
-            docker run -d -p 80:3000 --name nextjs-docker ${{ secrets.NCP_NCR }}/nextjs-docker:latest
-            docker image prune -f
+            docker-compose up -d
             docker logout
