--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,6 +55,10 @@ jobs:
           target: /deploy/scripts
 
       - name: Connect ssh to NCP Server
+        env:
+          BUILD_NUMBER: latest
+          NCP_NCR: ${{ secrets.NCP_NCR }}
+          IMAGE_NAME: ${{env.IMAGE_NAME}}
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.NCP_SERVER_IP }}
