--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,12 @@
 		"react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }],
 		"react/jsx-props-no-spreading": 0,
 		"react/function-component-definition": [2, { "namedComponents": ["arrow-function", "function-declaration"] }],
-		"import/no-extraneous-dependencies": 0
+		"import/no-extraneous-dependencies": 0,
+		"@typescript-eslint/no-var-requires": 0
+	},
+	"settings": {
+		"import/resolver": {
+			"typescript": {}
+		}
 	}
 }
