--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "i18next": "^22.5.0",
+    "next-i18next": "^13.2.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "react-i18next": "^12.3.1",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   }
