--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,24 @@
     "prettier",
     "airbnb",
     "airbnb/hooks",
+    "plugin:storybook/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".tsx", ".ts"]
+      }
+    ],
     "react/jsx-props-no-spreading": 0,
-    "react/function-component-definition": [2, { "namedComponents": ["arrow-function", "function-declaration"] }],
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": ["arrow-function", "function-declaration"]
+      }
+    ],
     "import/no-extraneous-dependencies": 0,
     "@typescript-eslint/no-var-requires": 0,
     "no-tabs": 0
