--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint './**/*.{ts,tsx,js,jsx}'",
-    "lint:fix": "eslint --fix './**/*.{ts,tsx,js,jsx}'"
+    "lint:fix": "eslint --fix './**/*.{ts,tsx,js,jsx}'",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "next": "13.4.4",
@@ -15,6 +17,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.18",
+    "@storybook/addon-interactions": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
+    "@storybook/blocks": "^7.0.18",
+    "@storybook/nextjs": "^7.0.18",
+    "@storybook/react": "^7.0.18",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -31,11 +40,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "i18next": "^22.5.0",
     "next-i18next": "^13.2.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "react-i18next": "^12.3.1",
+    "storybook": "^7.0.18",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
