--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/addon-links": "^7.0.18",
     "@storybook/addon-mdx-gfm": "^7.0.18",
     "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-styling": "^1.0.8",
     "@storybook/blocks": "^7.0.18",
     "@storybook/nextjs": "^7.0.18",
     "@storybook/react": "^7.0.18",
@@ -48,6 +49,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "react-i18next": "^12.3.1",
+    "sass": "^1.62.1",
     "storybook": "^7.0.18",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
