--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,8 @@
     ],
     "import/no-extraneous-dependencies": 0,
     "@typescript-eslint/no-var-requires": 0,
-    "no-tabs": 0
+    "no-tabs": 0,
+    "import/prefer-default-export": 0
   },
   "settings": {
     "import/resolver": {
