--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "allowImportingTsExtensions": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/*.stories.tsx"]
 }
