[chore] 빌드 실패 스크립트 수정

--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -10,7 +10,7 @@ env:
   BUCKET_NAME: front-storybook
 
 jobs:
-  build-and-deploy:
+  docker-deploy:
     runs-on: ubuntu-latest
     if: github.repository == 'bsideproject/KoLiving_FE'
 
