--- a/.github/workflows/storybook-deploy.yml
+++ b/.github/workflows/storybook-deploy.yml
@@ -19,14 +19,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Package Install
-        # 스토리북 관련 패키지만 install 하면 되지만... 패키지를 일일이 해 주기 힘드니 일단은 전체...
         run: yarn install
 
-      - name: Build Storybook
-        run: yarn build-storybook
-
-      - name: Deploy Storybook
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.NCP_SERVER_USERNAME }}
-          AWS_SECRET_ACCESS_KEY: ${{secrets.NCP_SERVER_PASSWORD}}
-        run: aws --endpoint-url=${{ env.NAVER_S3_ENDPOINT }} s3 cp --recursive ./storybook-static s3://${{ env.BUCKET_NAME }}
+      - name: Publish to Chromatic
+        uses: chromaui/action@v1
+        with:
+          projectToken: ${{ secrets.CHROMATIC_TOKEN }}
