--- a/.github/workflows/storybook-deploy.yml
+++ b/.github/workflows/storybook-deploy.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
 
-env:
-  NAVER_S3_ENDPOINT: https://kr.object.ncloudstorage.com
-  BUCKET_NAME: front-storybook
-
 jobs:
   storybook-deploy:
     runs-on: ubuntu-latest
@@ -21,7 +17,8 @@ jobs:
       - name: Package Install
         run: yarn install
 
-      - name: Publish to Chromatic
-        uses: chromaui/action@v1
-        with:
-          projectToken: ${{ secrets.CHROMATIC_TOKEN }}
+      - name: Build Storybook
+        run: yarn build-storybook
+
+      - name: Deploy Storybook
+        run: npx chromatic --project-token=${{ secrets.CHROMATIC_TOKEN}}
