--- a/.github/workflows/storybook-deploy.yml
+++ b/.github/workflows/storybook-deploy.yml
@@ -12,10 +12,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
 
-      - name: Package Install
-        run: yarn install
+      - name: Install dependencies
+        run: yarn
 
-      - name: Deploy Storybook
-        run: npx chromatic --project-token=${{ secrets.CHROMATIC_TOKEN}}
+      - name: Publish to Chromatic
+        uses: chromaui/action@v1
+        with:
+          projectToken: ${{ secrets.CHROMATIC_TOKEN }}
