--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,13 @@
     "import/no-extraneous-dependencies": 0,
     "@typescript-eslint/no-var-requires": 0,
     "no-tabs": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "prettier/prettier": [
+      "error",
+      {
+          "endOfLine": "auto"
+      }
+    ]
   },
   "settings": {
     "import/resolver": {
