[chore] 빌드 에러 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,9 +30,10 @@
     "prettier/prettier": [
       "error",
       {
-          "endOfLine": "auto"
+        "endOfLine": "auto"
       }
-    ]
+    ],
+    "react/button-has-type": 0
   },
   "settings": {
     "import/resolver": {
