--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
@@ -56,7 +57,8 @@
     "sass": "^1.62.1",
     "storybook": "^7.0.18",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   },
   "description": "KoLiving 서비스",
   "author": "살아남은공룡들 프론트엔드 개발팀",
