[feat] icon 을 svg 로 수정 (svgr 을 사용하도록 함)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
         "name": "typescript-plugin-css-modules"
       }
     ],
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "**/*.stories.tsx"]
