--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/nextjs": "^7.0.18",
     "@storybook/react": "^7.0.18",
     "@storybook/testing-library": "^0.1.0",
+    "@svgr/webpack": "5.5.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -57,6 +58,7 @@
     "sass": "^1.62.1",
     "storybook": "^7.0.18",
     "tailwindcss": "^3.3.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
