--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,8 @@
     ],
     "react/button-has-type": 0,
     "react/require-default-props": 0,
-    "react/no-array-index-key": 0
+    "react/no-array-index-key": 0,
+    "import/extensions": 0
   },
   "settings": {
     "import/resolver": {
