--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/react": "^7.0.18",
     "@storybook/testing-library": "^0.1.0",
     "@svgr/webpack": "5.5.0",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -39,6 +40,7 @@
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
     "chromatic": "^6.18.0",
+    "date-fns": "^2.30.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
