--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,9 @@
     "react/button-has-type": 0,
     "react/require-default-props": 0,
     "react/no-array-index-key": 0,
-    "import/extensions": 0
+    "import/extensions": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0
   },
   "settings": {
     "import/resolver": {
