--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-lottie": "^1.2.3",
     "sass": "^1.62.1",
     "storybook": "^7.0.18",
+    "swiper": "^10.0.4",
     "tailwindcss": "^3.3.2",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "5.0.4",
