--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_HOST=http://koliving.kro.kr
+NEXT_PUBLIC_API_HOST_DEV=http://koliving.kro.kr
+NEXT_PUBLIC_API_HOST=http://101.101.219.48
