--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@types/react-lottie": "^1.2.6",
+    "@types/react-transition-group": "^4.4.6",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
@@ -59,6 +60,7 @@
     "prettier": "^2.8.8",
     "react-i18next": "^12.3.1",
     "react-lottie": "^1.2.3",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.62.1",
     "storybook": "^7.0.18",
     "swiper": "^10.0.4",
