[feat] step2 API 연동 중

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_API_HOST_DEV=http://localhost:3000
-NEXT_PUBLIC_API_HOST=http://101.101.219.48
+NEXT_PUBLIC_API_HOST=http://koliving-backend.net
