--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3"
+    "react-hook-form": "^7.44.3",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.18",
