--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
+    "react-images-uploading": "^3.1.7",
     "react-select": "^5.7.4"
   },
   "devDependencies": {
