--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_HOST_DEV=http://koliving.kro.kr
 NEXT_PUBLIC_API_HOST=http://101.101.219.48
+NEXTAUTH_SECRET=kolivinauthsecret0001111
