--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "next": "13.4.4",
+    "next-auth": "4.18.5",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
@@ -35,6 +36,7 @@
     "@storybook/testing-library": "^0.1.0",
     "@svgr/webpack": "5.5.0",
     "@types/date-fns": "^2.6.0",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
