--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "next": "13.4.4",
-    "next-auth": "4.18.5",
+    "next-auth": "^4.22.0",
+    "next-cookies": "^2.0.3",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
