[fix] 정상적으로 빌드되도록 수정한다

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_API_HOST_DEV=http://koliving.kro.kr
 NEXT_PUBLIC_API_HOST=http://101.101.219.48
 NEXTAUTH_SECRET=kolivinauthsecret0001111
+NEXTAUTH_URL=http://127.0.0.1:3000
