--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_API_HOST_DEV=http://koliving.kro.kr
-NEXT_PUBLIC_API_HOST=http://101.101.219.48
+NEXT_PUBLIC_API_HOST=http://koliving-backend.net
 NEXTAUTH_SECRET=kolivinauthsecret0001111
-NEXTAUTH_URL=http://127.0.0.1:3000
+NEXTAUTH_URL=http://koliving.kro.kr
