--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_HOST_DEV=http://localhost:3000
 NEXT_PUBLIC_API_HOST=http://koliving-backend.net
+NEXTAUTH_URL=http://localhost:3000
