--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_HOST_DEV=http://koliving.kro.kr
 NEXT_PUBLIC_API_HOST=http://koliving-backend.net
+NEXTAUTH_URL=http://koliving.kro.kr
