[feat] cors 에러 해결 (그냥 proxy 로 하자...)

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_API_HOST_DEV=http://koliving.kro.kr
-NEXT_PUBLIC_API_HOST=http://koliving-backend.net
+NEXT_PUBLIC_API_HOST=http://koliving.kro.kr/back-end-api
 NEXTAUTH_SECRET=kolivinauthsecret0001111
 NEXTAUTH_URL=http://koliving.kro.kr
