--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_HOST_DEV=http://localhost:3000
-NEXT_PUBLIC_API_HOST=http://koliving-backend.net
+NEXT_PUBLIC_API_HOST=http://localhost:3000/back-end-api
 NEXTAUTH_URL=http://localhost:3000
