--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_HOST_DEV=http://koliving.kro.kr
-NEXT_PUBLIC_API_HOST=http://koliving-backend.net
+NEXT_PUBLIC_API_HOST=http://koliving.kro.kr/back-end-api
 NEXTAUTH_URL=http://koliving.kro.kr
