--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/testing-library": "^0.1.0",
     "@svgr/webpack": "5.5.0",
     "@types/date-fns": "^2.6.0",
+    "@types/lodash-es": "^4.17.10",
     "@types/next-auth": "^3.15.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
